...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/EditPassword"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/RegPassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/EditEmail"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints=""
        android:hint="Email"
...
        android:text="Confirm Password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegPassword" />

    <EditText
        android:id="@+id/EditName"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:hint="name"
        android:inputType="textLongMessage"
        app:layout_constraintBaseline_toBaselineOf="@+id/courseName"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/EditConfirmPassword"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints=""
        android:hint="password"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/RegConfirm"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="241dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/savebutton"
...
        android:text="Username"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextRegistration" />

    <EditText
        android:id="@+id/EditUsername"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:autofillHints=""
        android:hint="username"
...
