...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/listNotes"
        android:divider="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/profile"
        ></ListView>

    <androidx.appcompat.widget.AppCompatButton
...
